--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "git add ./"
+    "deploy": "git add . && git commit -m \"new commit\" && git push -u origin main"
   },
   "dependencies": {
     "git": "^0.1.5",
