--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "git": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
